[project]
name = "dpll-labra"
version = "0.1.0"
description = "DPLL-algoritmin toteutus Pythonilla. Algoritmit ja tekoäly -harjoitustyö, Helsingin Yliopisto"
authors = [
    {name = "lassisav",email = "lassi.savolainen@helsinki.fi"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
